<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Memo Geo</string>
    <string name="action_settings">Settings</string>
    <string name="newMemo">New memo</string>
    <string name="option">Options</string>
    <string name="save">Save</string>
    <string name="where">Where</string>
    <string name="when">When</string>
    <string name="here">Here</string>
    <string name="openMap">Map</string>
    <string name="address">Address</string>
    <string name="choose">Choose</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="title_activity_options">Options</string>
    <string name="title_new_memo">New Memo</string>
    <string name="title_list_memo">List Memo</string>
    <string name="title_delete_list_memo">Delete</string>
    <string name="title_activity_write_new_memo">Write a memo</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_list_memo">ListMemo</string>
    <string name="title_activity_map">Map</string>
    <string name="title_head_list_memo">Your List Memo :</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_time_option">When</string>
    <string name="hintTime">HH:MM</string>
    <string name="hintDate">DD/MM/YYYY</string>
    <string name="map">Map</string>
    <string name="API_key">AIzaSyDi_gj56nXHbM3TNZF09UzBEEhCvkd5zHg</string>
    <string name="debug">C1:21:C8:60:93:10:52:A5:9E:48:27:34:B8:D1:55:B6:CD:D7:17:D1</string>
    <string name="titleMain">Home</string>
    <string name="textViewTitle">Title:</string>
    <string name="textViewDescription">Description:</string>
    <string name="next_new_memo">Next</string>
    <string name="title_memo_list">Memo List</string>
    <string name="Save">Save</string>
    <string name="View">View</string>
    <string name="Delete">Delete</string>
    <string name="Edit">Edit</string>
    <string name="Add_button">Add</string>
    <string name="title_activity_window">WindowActivity</string>
    <string name="title_activity_cutom">CutomActivity</string>
    <string name="title_activity_custom">CustomActivity</string>
    <string name="back_button">Back</string>
    <string name="next_button">Next</string>
    <string name="heading">Memo Geo</string>
    <string name="backOption">Back</string>
    <string name="timers">Timers</string>
    <string name="list_memo">List Memo</string>
    <string name="launch">Launch</string>
    <string name="geoTimer">Geo Timer</string>
    <string name="timeTimer">Time Timer</string>
   

</resources>
