<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
  	android:layout_width="match_parent"
  	android:layout_height="match_parent"
  	android:gravity="center_horizontal"
  	android:orientation="horizontal">

  	<Button
  	    android:id="@+id/buttonBack"
  	    android:layout_width="60dp"
  	    android:layout_height="wrap_content"
  	    android:layout_marginLeft="16dp"
  	    android:layout_marginRight="150dp"
  	    style="@style/MyButton.Menu"
  	    android:text="@string/back_button" />
  	
  	 <TextView
        android:id="@+id/textViewHeading"
        android:layout_width="wrap_content"
        android:text="@string/app_name"
        style="@style/TextViewStyle"
        android:textAppearance="?android:attr/textAppearanceLarge" />
  	 <!--android:text="@string/heading"--> 
  	
  	<Button
  	    android:id="@+id/buttonNext"
  	    android:layout_width="60dp"
  	    android:layout_height="wrap_content"
  	    android:layout_marginLeft="150dp"
  	    android:layout_marginRight="16dp"
  	    style="@style/MyButton.Menu"
  	    android:text="@string/next_button" />
  
</LinearLayout>