<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent" >

    <!-- Titre du menu -->

    <TextView
        android:id="@+id/textViewOption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/option"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <!-- Saving button -->

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/save" />

    <!-- Permet de scroller les options. (contient un seul objet) -->

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonSave" >

        <!-- Permet d'avoir un seul objet dans le scrollview. -->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="250dp" >

            <!-- Bouton pour passer sur la carte -->

            <Button
                android:id="@+id/buttonMap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:text="@string/openMap" />

            <!-- Titre Where -->

            <TextView
                android:id="@+id/textViewWhere"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/buttonHere"
                android:layout_alignBottom="@+id/buttonHere"
                android:layout_alignParentLeft="true"
                android:text="@string/where"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <!-- Bouton pour directement choisir l'endroit où l'on est. -->

            <Button
                android:id="@+id/buttonHere"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/buttonMap"
                android:layout_toLeftOf="@+id/buttonMap"
                android:text="@string/here" />

            <!-- Titre Adresse -->

            <TextView
                android:id="@+id/textViewAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/textViewWhere"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="15dp"
                android:text="@string/address"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <!-- Champ pour l'adresse -->

            <EditText
                android:id="@+id/editTextAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/textViewAddress"
                android:layout_alignBottom="@+id/textViewAddress"
                android:layout_alignParentRight="true"
                android:layout_toRightOf="@+id/textViewAddress" >

                <requestFocus />
            </EditText>

            <!-- Bouton pour choisir la date et l'heure -->

            <Button
                android:id="@+id/buttonChooseTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/editTextAddress"
                android:layout_marginTop="30dp"
                android:text="@string/choose" />

            <!-- Titre When -->

            <TextView
                android:id="@+id/textViewWhen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/buttonChooseTime"
                android:layout_alignBottom="@+id/buttonChooseTime"
                android:layout_alignParentLeft="true"
                android:text="@string/when"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <!-- Titre Date -->

            <TextView
                android:id="@+id/textViewDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/textViewWhen"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="15dp"
                android:text="@string/date"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <!-- Champ pour la date -->

            <EditText
                android:id="@+id/editTextDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/textViewDate"
                android:layout_alignBottom="@+id/textViewDate"
                android:layout_alignParentRight="true"
                android:layout_toRightOf="@+id/textViewDate" >

                <requestFocus />
            </EditText>

            <!-- Titre Time -->

            <TextView
                android:id="@+id/textViewTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/textViewDate"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="15dp"
                android:text="@string/time"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <!-- Champ pour l'heure -->

            <EditText
                android:id="@+id/editTextTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/textViewTime"
                android:layout_alignBottom="@+id/textViewTime"
                android:layout_alignParentRight="true"
                android:layout_toRightOf="@+id/textViewTime" >

                <requestFocus />
            </EditText>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>