<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:gravity="center"
 >

    <!-- TextView
        android:id="@+id/textViewTitleMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titleMain"
        android:textAlignment="center"
    	android:layout_marginTop="-100dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:capitalize="characters"
        android:textColor="@color/darkblue" /-->
    
    <Button
        android:id="@+id/new_memo"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_marginTop="-50dp"
        style="@style/MyButton.Blue"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title_new_memo" />
      <Button
        android:id="@+id/open_map"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:text="@string/map"
        android:layout_marginTop="50dp" 
        style="@style/MyButton.Blue"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <Button
        android:id="@+id/list_memo"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_marginTop="50dp"
         style="@style/MyButton.Blue"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title_list_memo" />
    
  
   
    
</LinearLayout>