<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >
    
     <!-- Save button named buttonSave1 to avoid any conflict with the activity_options's Save button -->

     <Button
        android:id="@+id/buttonSave1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="350dp"
        android:layout_toRightOf="@+id/buttonBack"
        android:onClick="add"
        android:text="Save" />
    
  	<Button
  	    android:id="@+id/buttonBack"
  	    style="@style/MyButton.Menu"
  	    android:layout_width="60dp"
  	    android:layout_height="wrap_content"
  	    android:layout_marginLeft="16dp"
  	    android:layout_marginTop="32dp"
  	    android:layout_marginRight="150dp"
  	    android:layout_toLeftOf="@+id/textViewNewMemo"
  	    android:onClick="back"
  	    android:text="@string/back_button" />
  	 
  	  <TextView
        android:id="@+id/textViewNewMemo"
        android:layout_toLeftOf="@+id/buttonOption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       
        android:layout_marginTop="32dp"
        android:layout_alignBaseline="@+id/buttonBack"
        
        android:layout_marginLeft="50dp"
      	android:layout_marginRight="50dp"
        android:text="@string/newMemo"
        style="@style/TextViewStyle"
        android:textAppearance="?android:attr/textAppearanceLarge" />
  	
  
    <!-- Option button -->

    <Button
        android:id="@+id/buttonOption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="22dp"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="32dp"
        style="@style/MyButton.Menu"
        android:text="@string/next_new_memo" />

    <!-- Memo title textView -->

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="132dp"
        android:layout_marginLeft="16dp"
        android:text="@string/textViewTitle" />


    <!-- Memo  title editText -->

    <EditText
        android:id="@+id/editTextTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textViewTitle"
        android:layout_alignRight="@+id/buttonOption"
        android:layout_marginLeft="95dp"
        android:ems="100"
        android:gravity="top"
        android:inputType="text" />
    

    <!-- Memo Description  textView -->

    <TextView
        android:id="@+id/textViewDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewTitle"
        android:layout_below="@+id/textViewTitle"
        android:layout_marginTop="42dp"
        android:text="@string/textViewDescription" />
    	<!-- android:text="@string/Description:"--> 

    <!-- Memo Description  editText with  ScrollView -->
    
      

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textViewDescription"
        android:layout_alignRight="@+id/editTextTitle" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/editTextDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="95dp"
                android:ems="100"
                android:gravity="top"
                android:inputType="textMultiLine"
                android:lines="5" >
                
            
                <requestFocus />
            </EditText>
        </RelativeLayout>
        
    </ScrollView>
	
   
          

</RelativeLayout>